--- a/mean/angular/belt_review/app_client/templates/question.html
+++ b/mean/angular/belt_review/app_client/templates/question.html
@@ -20,5 +20,6 @@
     <h5>Post your comment here</h5>
     <textarea ng-model='comment'></textarea>
     <button type="submit">Submit</button>
+    {{ alreadyCommented }}
   </form>
 </div>
