--- a/ruby/rails/rails_testing/the_wall/wall/app/assets/stylesheets/users.scss
+++ b/ruby/rails/rails_testing/the_wall/wall/app/assets/stylesheets/users.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.main{
+  margin-top: 100px;
+}
+.nav li, .nav a {
+  color: white !important
+}
