--- a/ruby/rails/rails_testing/the_wall/wall/app/views/layouts/application.html.erb
+++ b/ruby/rails/rails_testing/the_wall/wall/app/views/layouts/application.html.erb
@@ -3,12 +3,16 @@
   <head>
     <title>Wall</title>
     <%= csrf_meta_tags %>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+    <%= render 'shared/nav' %>
+    <div class="main container">
+      <%= render 'shared/flash' %>
+      <%= yield %>
+    </div>
   </body>
 </html>
