--- a/ruby/rails/rails_testing/the_wall/wall/app/views/users/login.html.erb
+++ b/ruby/rails/rails_testing/the_wall/wall/app/views/users/login.html.erb
@@ -1,2 +1,13 @@
-<h1>Users#login</h1>
-<p>Find me in app/views/users/login.html.erb</p>
+<h1>Login</h1>
+
+<%= form_tag("/users/login", method: "post") do %>
+  <div class="form-group">
+    <%= label_tag(:username, "Username:") %>
+    <%= text_field_tag(:username) %>
+  </div>
+  <div class="form-group">
+    <%= label_tag(:password, "Password:") %>
+    <%= password_field_tag(:password) %>
+  </div>
+  <%= submit_tag("Login") %>
+<% end %>
