--- a/ruby/rails/rails_testing/the_wall/wall/app/views/users/new.html.erb
+++ b/ruby/rails/rails_testing/the_wall/wall/app/views/users/new.html.erb
@@ -1,1 +1,22 @@
 <h1>Register</h1>
+
+<%= form_for @user do |f| %>
+  <%= render 'shared/errors', object:@user %>
+  <div class="form-group">
+    <%= f.label :username %>
+    <%= f.text_field :username %>
+  </div>
+  <div class="form-group">
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+  </div>
+  <div class="form-group">
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+  </div>
+  <div class="form-group">
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
+  </div>
+  <%= f.submit 'Register' %>
+<% end %>
